@@ -1,16 +1,9 @@
-import org.gradle.api.tasks.testing.logging.TestLogEvent
-import java.net.URI
-
-fun properties(key: String) = project.findProperty(key).toString()
-group = properties("libraryGroup")
-version = properties("libraryVersion")
+group = providers.gradleProperty("libraryGroup").get()
+version = providers.gradleProperty("libraryVersion").get()
 
 plugins {
-    id("cognotik.common-conventions")
     `java-library`
     `scala`
-    `maven-publish`
-    id("signing")
 }
 
 repositories {
@@ -22,7 +15,6 @@ repositories {
     }
 }
 
-val scala_version = "2.13.12"
 dependencies {
 
     implementation(project(":core"))
@@ -32,91 +24,12 @@ dependencies {
     implementation(libs.slf4j.api)
 
     testImplementation(group = "org.slf4j", name = "slf4j-simple", version = libs.versions.slf4j.get())
-    testImplementation(group = "org.junit.jupiter", name = "junit-jupiter-api", version = "5.10.1")
-    testRuntimeOnly(group = "org.junit.jupiter", name = "junit-jupiter-engine", version = "5.10.1")
-    testImplementation(group = "org.scala-lang.modules", name = "scala-java8-compat_2.13", version = "0.9.1")
+    testImplementation(libs.scala.java8.compat)
 
-}
+    testImplementation(platform(libs.junit.bom))
+    testImplementation(libs.junit.jupiter.api) // Version from BOM
+    testRuntimeOnly(libs.junit.jupiter.engine) // Version from BOM
+    testImplementation(libs.kotlin.test.junit5)
 
-tasks {
-    test {
-        useJUnitPlatform()
-        systemProperty("surefire.useManifestOnlyJar", "false")
-        testLogging {
-            events(TestLogEvent.PASSED, TestLogEvent.SKIPPED, TestLogEvent.FAILED)
-            exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
-        }
-        jvmArgs(
-            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
-            "--add-opens", "java.base/java.util=ALL-UNNAMED",
-            "--add-opens", "java.base/java.lang=ALL-UNNAMED"
-        )
-    }
-}
 
-publishing {
-
-    publications {
-        create<MavenPublication>("mavenJava") {
-            artifactId = "scala"
-            from(components["java"])
-            versionMapping {
-                usage("java-api") {
-                    fromResolutionOf("runtimeClasspath")
-                }
-                usage("java-runtime") {
-                    fromResolutionResult()
-                }
-            }
-            pom {
-                name.set("Cognotik Scala Interpreter")
-                description.set("A very helpful puppy")
-                url.set("https://github.com/SimiaCryptus/Cognotik")
-                licenses {
-                    license {
-                        name.set("The Apache License, Version 2.0")
-                        url.set("http://www.apache.org/licenses/LICENSE-2.0.txt")
-                    }
-                }
-                developers {
-                    developer {
-                        id.set("acharneski")
-                        name.set("Andrew Charneski")
-                        email.set("acharneski@gmail.com")
-                    }
-                }
-                scm {
-                    connection.set("scm:git:git://git@github.com/SimiaCryptus/Cognotik.git")
-                    developerConnection.set("scm:git:ssh://git@github.com/SimiaCryptus/Cognotik.git")
-                    url.set("https://github.com/SimiaCryptus/Cognotik")
-                }
-            }
-        }
-    }
-    repositories {
-        maven {
-            val releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-            val snapshotsRepoUrl = "https://oss.sonatype.org/mask/repositories/snapshots"
-            url = URI(if (version.toString().endsWith("SNAPSHOT")) snapshotsRepoUrl else releasesRepoUrl)
-            credentials {
-                username = System.getenv("OSSRH_USERNAME") ?: System.getProperty("ossrhUsername")
-                        ?: properties("ossrhUsername")
-                password = System.getenv("OSSRH_PASSWORD") ?: System.getProperty("ossrhPassword")
-                        ?: properties("ossrhPassword")
-            }
-        }
-    }
-    if (System.getenv("GPG_PRIVATE_KEY") != null && System.getenv("GPG_PASSPHRASE") != null) afterEvaluate {
-        signing {
-            sign(publications["mavenJava"])
-        }
-    }
-}
-
-if (System.getenv("GPG_PRIVATE_KEY") != null && System.getenv("GPG_PASSPHRASE") != null) {
-    apply<SigningPlugin>()
-    configure<SigningExtension> {
-        useInMemoryPgpKeys(System.getenv("GPG_PRIVATE_KEY"), System.getenv("GPG_PASSPHRASE"))
-        sign(configurations.archives.get())
-    }
 }
